--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/bootstap.css" type="text/css"></link>
-    <link rel="stylesheet" href="/css/styles.css" type="text/css"></link>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title>pig-latin</title>
   </head>
   <body>
-
-
-  //
-
-
-
+    <main class="container">
+      <h1>Pit Latin Translator</h1>
+      <form id="pig-latin">
+        <section class="form-group">
+          <input type="text" class="form-control" id="user-input" name="user-input">
+        </section>
+        <button type="submit" class="btn btn-dark" name="button">Translate</button>
+      </form>
+    </main>
   </body>
 </html>
