change order of bdd steps in readme, add result section in html to return result, make first passing business logic function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </section>
         <button type="submit" class="btn btn-dark" name="button">Translate</button>
       </form>
+      <section id="result"></section>
     </main>
   </body>
 </html>
