--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main class="container">
-      <h1>Pit Latin Translator</h1>
+      <h1>Pig Latin Translator</h1>
       <form id="pig-latin">
         <section class="form-group">
           <input type="text" class="form-control" id="user-input" name="user-input">
